--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": ".eleventy.js",
   "scripts": {
+    "build": "npx eleventy",
     "start": "npx eleventy --serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
